ui: extra margin between title and content

--- a/apollo/templates/admin/participant_list.html
+++ b/apollo/templates/admin/participant_list.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="d-flex justify-content-between align-items-md-center flex-column flex-md-row mb-n2">
+<div class="d-flex justify-content-between align-items-md-center flex-column flex-md-row mb-2">
   <nav class="nav mb-4" aria-label="breadcrumb">
     <ol class="breadcrumb mb-n2">
         {% for breadcrumb in breadcrumbs %}
