ui: forms management

--- a/apollo/frontend/templates/frontend/macros/send_message.html
+++ b/apollo/frontend/templates/frontend/macros/send_message.html
@@ -1,5 +1,5 @@
 {% macro send_message_modal(recipients) %}
-<div class="modal fade" id="send_message" style="display:none" tabindex="-1" role="dialog" aria-labelledby="send_message_label" aria-hidden="true">
+<div class="modal fade" id="send_message" tabindex="-1" role="dialog" aria-labelledby="send_message_label" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
