--- a/apollo/templates/admin/formbuilder.html
+++ b/apollo/templates/admin/formbuilder.html
@@ -1,8 +1,7 @@
-{% extends 'frontend/_layout.html' %}
-{% block stylesheets %}
+{% extends 'admin/base.html' %}
+{% block head_css %}
+{{ super() }}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/angular-form-builder.css') }}">
-{% endblock %}
-{% block content %}
 <style>
   .form-group {
     margin-bottom: 0
@@ -11,30 +10,41 @@
     margin-bottom: 0
   }
 </style>
-<div ng-app="app">
-  <div class="row" id="formbuilder" ng-controller="BuilderController" data-form='{{ form_data|tojson }}' data-csrf="{{ csrf_token() }}">
-    <div class="col-md-6" style="margin-bottom:8em;">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title">{{ form.name }}</h3>
+{% endblock %}
+
+{% block body %}
+<div class="d-flex justify-content-between align-items-md-center flex-column flex-md-row mb-n2">
+  <nav class="nav mb-4" aria-label="breadcrumb">
+    <ol class="breadcrumb mb-n2">
+        {% for breadcrumb in breadcrumbs %}
+        <li class="breadcrumb-item {%- if loop.last %} active{% endif %}" {%- if loop.last %} aria-current="page"{% endif %}>
+          {% if breadcrumb.url -%}
+          <a href="{{ breadcrumb.url }}" class="text-decoration-none">{{ breadcrumb.text or breadcrumb }}</a>
+          {%- else -%}
+          {{ breadcrumb.text or breadcrumb }}
+          {%- endif %}
+        </li>
+        {% endfor %}
+    </ol>
+  </nav>
+</div>
+
+<div id="app" ng-app="app">
+  <div class="row mt-3 d-flex" id="formbuilder" ng-controller="BuilderController" data-form='{{ form_data|tojson }}' data-csrf="{{ csrf_token() }}">
+    <div class="col-md-6">
+      <div class="card border-light bg-light">
+        <div class="card-header">
+          <h5 class="card-title mb-0">{{ form.name }}</h5>
         </div>
         <div fb-builder="default"></div>
       </div>
     </div>
-    <div class="col-md-6" style="position: sticky; position: -webkit-sticky; top: 1em">
-      <div class="panel panel-default" style="margin-bottom:2.5em;">
-        <div class="panel-body">
+    <div class="col-md-6 sticky-top h-100" style="top: 5em">
+      <div class="card border-light bg-light" style="margin-bottom:2.5em;">
+        <div class="card-body">
           <div fb-components></div>
-          <div class="form-horizontal">
-            <div class="fb-component">
-              <div class="form-group">
-                <label class="col-sm-2 control-label">&nbsp;</label>
-                <div class="col-sm-10">
-                  <button class="btn btn-primary" ng-click="submit();"><span class="glyphicon glyphicon-save"></span> Save</button>
-                  <a href="{% if form_set_id %}{{ url_for('forms.list_forms_with_set', form_set_id=form.form_set_id) }}{% else %}{{ url_for('forms.list_forms') }}{% endif %}" class="btn btn-default">Cancel</a>
-                </div>
-              </div>
-            </div>
+          <div>
+            <button id="save" class="btn btn-primary d-none" ng-click="submit();"></button>
           </div>
         </div>
       </div>
@@ -42,7 +52,18 @@
   </div>
 </div>
 {% endblock %}
-{% block scripts %}
+
+{% block footer %}
+<div class="mt-n2 pb-2 w-25 d-flex justify-content-end">
+  <div>
+    <a href="{{ url_for('formsview.index') }}" class="btn btn-secondary">{{ _('Cancel') }}</a>
+    <button type="button" id="saveBtn" class="btn btn-primary">{{ _('Save') }}</button>
+  </div>
+</div>
+{% endblock %}
+
+{% block tail_js %}
+{{ super() }}
 <script src="{{ url_for('static', filename='js/simply-toast.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/angular.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/angular-form-builder.js') }}"></script>
@@ -81,7 +102,7 @@
             },
             type: 'POST',
           });
-          window.location.href = "{{ url_for('forms.list_forms') }}";
+          window.location.href = "{{ url_for('formsview.index') }}";
         }).error(function() {
           return console.log('error');
         });
@@ -89,7 +110,9 @@
     }
   ]);
 
+  $('#saveBtn').click(function(){
+    $('#save').click();
+  })
 }).call(this);
-
 </script>
 {% endblock %}
