--- a/apollo/frontend/templates/frontend/submission_edit.html
+++ b/apollo/frontend/templates/frontend/submission_edit.html
@@ -20,12 +20,12 @@
   <table class="table table-bordered">
   <tr>
     <th class="col-2">{{ _('Participant') }}</th>
-    <td>{% if submission.participant %}<strong>{{ submission.participant.name }}</strong> &mdash; <strong>{{ submission.participant.participant_id }}</strong>{%- if submission.participant.phone %} ({{ submission.participant.phone }}){%- endif %}
+    <td>{% if submission.participant %}<strong>{{ submission.participant.name }}</strong> &mdash; <strong>{{ submission.participant.participant_id }}</strong>{%- if submission.participant.primary_phone %} ({{ submission.participant.primary_phone }}){%- endif %}
     <input type="hidden" name="{{ submission_form['participant'].name }}" value="{{ submission_form['participant'].data.id|default('__None', true) }}" />
     {%- else -%}{{ submission_form.participant(class_='select2-container span4 input-xlarge select2 select2-observers') }}{% endif %}</td>
     {%- if form.form_type == 'CHECKLIST' -%}
     {%- for sib in siblings -%}
-    <td>{% if sib.participant %}<strong>{{ sib.participant.name }}</strong>{% if sib.participant.phone %} ({{ sib.participant.phone }}){% endif %} &mdash; <strong>{{ sib.participant.participant_id }}</strong>{% endif %}</td>
+    <td>{% if sib.participant %}<strong>{{ sib.participant.name }}</strong> &mdash; <strong>{{ sib.participant.participant_id }}</strong>{% if sib.participant.primary_phone %} ({{ sib.participant.primary_phone }}){% endif %}{% endif %}</td>
     {%- endfor -%}
     {%- endif -%}
   </tr>
@@ -82,9 +82,9 @@
   </tr>
   <tr>
     <th>{{ _('Supervisor') }}</th>
-    <td>{% if submission.participant and submission.participant.supervisor %}<strong>{{ submission.participant.supervisor.name|default('<em>{}</em>'.format(_('N/A')), true) }}</strong>{%- if submission.participant.supervisor.phone %} ({{ submission.participant.supervisor.phone }}){%- endif -%}{% else %}{{ _('N/A') }}{% endif %}</td>
+    <td>{% if submission.participant and submission.participant.supervisor %}<strong>{{ submission.participant.supervisor.name|default('<em>{}</em>'.format(_('N/A')), true) }}</strong>{%- if submission.participant.supervisor.primary_phone %} ({{ submission.participant.supervisor.primary_phone }}){%- endif -%}{% else %}{{ _('N/A') }}{% endif %}</td>
     {%- for sib in siblings -%}
-    <td>{% if sib.participant and sib.participant.supervisor %}<strong>{{ sib.participant.supervisor.name|default('<em>{}</em>'.format(_('N/A')), true) }}</strong>{%- if sib.participant.supervisor.phone %} ({{ sib.participant.supervisor.phone }}){%- endif -%}{% else %}{{ _('N/A') }}{% endif %}</td>
+    <td>{% if sib.participant and sib.participant.supervisor %}<strong>{{ sib.participant.supervisor.name|default('<em>{}</em>'.format(_('N/A')), true) }}</strong>{%- if sib.participant.supervisor.primary_phone %} ({{ sib.participant.supervisor.primary_phone }}){%- endif -%}{% else %}{{ _('N/A') }}{% endif %}</td>
     {%- endfor -%}
   </tr>
   {%- else -%}
