--- a/apollo/frontend/templates/frontend/message_list.html
+++ b/apollo/frontend/templates/frontend/message_list.html
@@ -56,12 +56,12 @@
   <table class="table table-striped table-hover">
     <thead class="thead-light">
       <tr>
-        <th scope="col">{{ _('Date') }}</th>
-        <th scope="col">{{ _('Time') }}</th>
+        <th scope="col" class="col-2">{{ _('Date') }}</th>
+        <th scope="col" class="col-1">{{ _('Time') }}</th>
         <th scope="col">{{ _('Mobile') }}</th>
         <th scope="col">{{ _('Direction') }}</th>
         <th scope="col">{{ _('Text') }}</th>
-        <th scope="col">{{ _('Type') }}</th>
+        <th scope="col" class="col-2">{{ _('Type') }}</th>
       </tr>
     </thead>
     <tbody>
