--- a/apollo/frontend/templates/frontend/submission_edit.html
+++ b/apollo/frontend/templates/frontend/submission_edit.html
@@ -109,11 +109,11 @@
   <li class="nav-item">
     <a class="nav-link active" id="checklist-tab" data-toggle="tab" role="tab" aria-controls="checklist-panel" aria-selected="true" href="#checklist-panel">{{ _('Checklist') }}</a>
   </li>
-  <!--<li class="nav-item">
-    <a class="nav-link" id="critical-incidents-tab" data-toggle="tab" role="tab" aria-controls="critical-incidents-panel" aria-selected="false" href="#critical-incidents-panel">{{ _('Critical Incidents') }}</a>
-  </li>
   <li class="nav-item">
     <a class="nav-link" id="messages-tab" data-toggle="tab" role="tab" aria-controls="messages-panel" aria-selected="false" href="#messages-panel">{{ _('Messages') }}</a>
+  </li>
+  <!--<li class="nav-item">
+    <a class="nav-link" id="critical-incidents-tab" data-toggle="tab" role="tab" aria-controls="critical-incidents-panel" aria-selected="false" href="#critical-incidents-panel">{{ _('Critical Incidents') }}</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" id="history-tab" data-toggle="tab" role="tab" aria-controls="history-panel" aria-selected="false" href="#history-panel">{{ _('History') }}</a>
@@ -265,11 +265,40 @@
     </div>
     {% endfor %}
   </div>
+  <div class="tab-pane fade" id="messages-panel" role="tabpanel" aria-labelledby="messages-tab">
+    <div class="table-responsive-md">
+      <table class="table table-hover">
+        <thead class="thead-light">
+          <tr>
+            <th scope="col">{{ _('Text') }}</th>
+            <th scope="col" class="col-2">{{ _('Mobile') }}</th>
+            <th scope="col" class="col-2">{{ _('Date') }}</th>
+            <th scope="col" class="col-1">{{ _('Time') }}</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for message in messages %}
+          <tr>
+            <td class="text-monospace">{{ message.text }}</td>
+            {% if perms.edit_participant.can() -%}
+            <td class="text-monospace"><a href="{{ url_for('participants.participant_edit', id=message.participant.id) }}">{{ message.sender }}</a></td>
+            {% else -%}
+            <td class="text-monospace">{{ message.sender }}</td>
+            {% endif -%}
+            <td class="text-monospace timestamp-date" data-timestamp="{{ message.received|timestamp }}">{{ message.received.strftime('%b %d %Y') }}</td>
+            <td class="text-monospace timestamp-time" data-timestamp="{{ message.received|timestamp }}">{{ message.received.strftime('%I:%M %p') }}</td>
+          </tr>
+          {% else %}
+          <tr class="table-warning">
+            <td class="text-center text-muted" colspan="4">{{ _('No Data Available') }}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </div>
   <!--<div class="tab-pane fade" id="critical-incidents-panel" role="tabpanel" aria-labelledby="critical-incidents-tab">
     {{ _('Critical Incidents Data') }}
-  </div>
-  <div class="tab-pane fade" id="messages-panel" role="tabpanel" aria-labelledby="messages-tab">
-    {{ _('Messages') }}
   </div>
   <div class="tab-pane fade" id="history-panel" role="tabpanel" aria-labelledby="history-tab">
     {{ _('History') }}
@@ -396,10 +425,20 @@
 <script type="text/javascript" src="{{ asset_url_for('moment.js') }}" charset="utf-8"></script>
 <script src="{{ url_for('static', filename='js/bootstrap-switch-button.min.js') }}"></script>
 <script type="text/javascript">
+  moment.lang('{{ g.locale }}');
+
   $(function () {
     $('.tonow').each(function (index) {
       var timestamp = moment.unix(Number($(this).data('timestamp')));
       this.innerText = timestamp.fromNow();
+    });
+    $('.timestamp-date').each(function (index) {
+        var timestamp = moment.unix(Number($(this).data('timestamp')));
+        this.innerText = timestamp.format('ll');
+    });
+    $('.timestamp-time').each(function (index) {
+        var timestamp = moment.unix(Number($(this).data('timestamp')));
+        this.innerText = timestamp.format('LT');
     });
 
     // provide warning before navigating away if form was modified
