--- a/apollo/static/src/scss/_custom.scss
+++ b/apollo/static/src/scss/_custom.scss
@@ -1,2 +1,6 @@
 $font-size-base:                1rem * .85;
 $enable-validation-icons:       false;
+
+[data-toggle~="collapse"] {
+    cursor: pointer;
+}
